Modified in browser at pixie.strd6.com

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# JavaScript Utilities for developing games.
+# JavaScript utilities for developing games.
 
 Provides important libraries for developing JavaScript games in the browser.
 
