Modified in browser at pixie.strd6.com

--- a/README
+++ b/README
@@ -4,4 +4,12 @@ Provides important libraries for developing JavaScript games in the browser.
 
 Defines the main PixieEngine GameObject and includes a variety of mixins to easily augment them with behaviors.
 
+Mixins
+  - Bounded: access the GameObject's bounding box. Useful to pass into collision code.
+  - Drawable: provides a simple draw method to the including object.
+  - Durable: cause GameObjects to be destroyed after a given duration.
+  - Emitter / Emitterable: A parameterizable system for creating particles
+  - Movable: Provides a basic position update according to velocity and acceleration. Best suited to things whose movement isn't very complex, like particles.
+  - Rotatable: Rotate a GameObject based on a rotational velocity you define.
+
 Common helper classes are included as well such as basic collisions, sprites, a drawing helper, and a particle system.
